tests/snapshots/formats__pbzx__Payload.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ Payload — pbzx, 1 chunk(s)  [0x0+0x1c9]
    Header — chunk size 0x1000000  [0x0+0xc]
  ▾ Chunk 1 — 32×24, 8-bit RGB  [0x1c+0x1ad] → 0xc+0x1bd
      Signature  [0x1c+0x8]
    ▾ IHDR — 32×24, 8-bit RGB  [0x24+0x19]
        Length: 13  [0x24+0x4]
        Type: "IHDR" — critical, public, unsafe to copy  [0x28+0x4]
      ▾ Header  [0x2c+0xd]
          Width: 32  [0x2c+0x4]
          Height: 24  [0x30+0x4]
          Bit depth: 8  [0x34+0x1]
          Color type: RGB (0x2)  [0x35+0x1]
          Compression method: 0  [0x36+0x1]
          Filter method: 0  [0x37+0x1]
          Interlace method: None (0x0)  [0x38+0x1]
        CRC: 0x14316863 — valid  [0x39+0x4]
    ▾ pHYs — 0x9 bytes  [0x3d+0x15]
        Length: 9  [0x3d+0x4]
        Type: "pHYs" — ancillary, public, safe to copy  [0x41+0x4]
      ▾ Physical dimensions  [0x45+0x9]
          Pixels per unit, X: 1  [0x45+0x4]
          Pixels per unit, Y: 1  [0x49+0x4]
          Unit: unknown (0x0)  [0x4d+0x1]
        CRC: 0x4f25c4d6 — valid  [0x4e+0x4]
    ▾ IDAT — 0xd7 bytes  [0x52+0xe3]
        Length: 215  [0x52+0x4]
        Type: "IDAT" — critical, public, unsafe to copy  [0x56+0x4]
        Data  [0x5a+0xd7]
        CRC: 0xb791568f — valid  [0x131+0x4]
    ▾ tEXt — Comment  [0x135+0x1f]
        Length: 19  [0x135+0x4]
        Type: "tEXt" — ancillary, public, safe to copy  [0x139+0x4]
        Keyword: "Comment"  [0x13d+0x8]
        Text: "hello world"  [0x145+0xb]
        CRC: 0x6a7b8eff — valid  [0x150+0x4]
    ▾ zTXt — Author  [0x154+0x2b]
        Length: 31  [0x154+0x4]
        Type: "zTXt" — ancillary, public, safe to copy  [0x158+0x4]
        Keyword: "Author"  [0x15c+0x7]
        Text: "fillyfoal tests"  [0x164+0x17]
        CRC: 0x9fd529c6 — valid  [0x17b+0x4]
    ▾ iTXt — Title  [0x17f+0x24]
        Length: 24  [0x17f+0x4]
        Type: "iTXt" — ancillary, public, safe to copy  [0x183+0x4]
        Keyword: "Title"  [0x187+0x6]
        Language: "en"  [0x18f+0x3]
        Translated keyword: "Titel"  [0x192+0x6]
        Text: "Grüße"  [0x198+0x7]
        CRC: 0xa70bfb03 — valid  [0x19f+0x4]
    ▾ tIME — 0x7 bytes  [0x1a3+0x13]
        Length: 7  [0x1a3+0x4]
        Type: "tIME" — ancillary, public, unsafe to copy  [0x1a7+0x4]
      ▾ Last modification  [0x1ab+0x7]
          Year: 2026  [0x1ab+0x2]
          Month: 10  [0x1ad+0x1]
          Day: 5  [0x1ae+0x1]
          Hour: 23  [0x1af+0x1]
          Minute: 59  [0x1b0+0x1]
          Second: 0  [0x1b1+0x1]
        CRC: 0x23be201a — valid  [0x1b2+0x4]
    ▾ IEND — 0x0 bytes  [0x1b6+0xc]
        Length: 0  [0x1b6+0x4]
        Type: "IEND" — critical, public, unsafe to copy  [0x1ba+0x4]
        Data  [0x1be+0x0]
        CRC: 0xae426082 — valid  [0x1be+0x4]
    ▾ Trailing data — UTF-8 text, 1 line  [0x1c2+0x7]
        Encoding: "UTF-8"
        Line endings: "none" — 0 LF, 0 CRLF, 0 CR
      ▾ Lines — 1 line  [0x1c2+0x7]
          Line 1: "TRAILER"  [0x1c2+0x7]
