tests/snapshots/formats__pbzx__pbzz.aar.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ pbzz.aar — pbzz, zlib, 1 chunk(s), 1473 bytes uncompressed  [0x0+0x323]
    Header — zlib, chunk size 0x400000  [0x0+0xc]
  ▾ Chunk 1 — 775 bytes, 1473 uncompressed  [0x1c+0x307] → 0xc+0x317
      ! unsupported: unrecognized format [0x1c+0x307]
  ▾ Decompressed — Apple Archive, 3 entries  [0x0+0x323]
      (root) — 0 bytes → #1:0x0+0x71
    ▾ a.txt — UTF-8 text, LF line endings, 1 line  [#1:0xc9+0x14] → #1:0x71+0x90
        Encoding: "UTF-8"
        Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
      ▾ Lines — 1 line  [#1:0xc9+0x14]
          Line 1: "hello apple archive"  [#1:0xc9+0x13]
    ▾ b.txt — UTF-8 text, LF line endings, 300 lines  [#1:0x159+0x444] → #1:0x101+0x4c0
        Encoding: "UTF-8"
        Line endings: "LF" — 300 LF, 0 CRLF, 0 CR
      ▾ Lines — 300 lines  [#1:0x159+0x444]
          Line 1: "1"  [#1:0x159+0x1]
          Line 2: "2"  [#1:0x15b+0x1]
          Line 3: "3"  [#1:0x15d+0x1]
          Line 4: "4"  [#1:0x15f+0x1]
          Line 5: "5"  [#1:0x161+0x1]
          Line 6: "6"  [#1:0x163+0x1]
          Line 7: "7"  [#1:0x165+0x1]
          Line 8: "8"  [#1:0x167+0x1]
          Line 9: "9"  [#1:0x169+0x1]
          Line 10: "10"  [#1:0x16b+0x2]
          Line 11: "11"  [#1:0x16e+0x2]
          Line 12: "12"  [#1:0x171+0x2]
          Line 13: "13"  [#1:0x174+0x2]
          Line 14: "14"  [#1:0x177+0x2]
          Line 15: "15"  [#1:0x17a+0x2]
          Line 16: "16"  [#1:0x17d+0x2]
          Line 17: "17"  [#1:0x180+0x2]
          Line 18: "18"  [#1:0x183+0x2]
          Line 19: "19"  [#1:0x186+0x2]
          Line 20: "20"  [#1:0x189+0x2]
          Line 21: "21"  [#1:0x18c+0x2]
          Line 22: "22"  [#1:0x18f+0x2]
          Line 23: "23"  [#1:0x192+0x2]
          Line 24: "24"  [#1:0x195+0x2]
          Line 25: "25"  [#1:0x198+0x2]
          Line 26: "26"  [#1:0x19b+0x2]
          Line 27: "27"  [#1:0x19e+0x2]
          Line 28: "28"  [#1:0x1a1+0x2]
          Line 29: "29"  [#1:0x1a4+0x2]
          Line 30: "30"  [#1:0x1a7+0x2]
          Line 31: "31"  [#1:0x1aa+0x2]
          Line 32: "32"  [#1:0x1ad+0x2]
          Line 33: "33"  [#1:0x1b0+0x2]
          Line 34: "34"  [#1:0x1b3+0x2]
          Line 35: "35"  [#1:0x1b6+0x2]
          Line 36: "36"  [#1:0x1b9+0x2]
          Line 37: "37"  [#1:0x1bc+0x2]
          Line 38: "38"  [#1:0x1bf+0x2]
          Line 39: "39"  [#1:0x1c2+0x2]
          Line 40: "40"  [#1:0x1c5+0x2]
          Line 41: "41"  [#1:0x1c8+0x2]
          Line 42: "42"  [#1:0x1cb+0x2]
          Line 43: "43"  [#1:0x1ce+0x2]
          Line 44: "44"  [#1:0x1d1+0x2]
          Line 45: "45"  [#1:0x1d4+0x2]
          Line 46: "46"  [#1:0x1d7+0x2]
          Line 47: "47"  [#1:0x1da+0x2]
          Line 48: "48"  [#1:0x1dd+0x2]
          Line 49: "49"  [#1:0x1e0+0x2]
          Line 50: "50"  [#1:0x1e3+0x2]
          Line 51: "51"  [#1:0x1e6+0x2]
          Line 52: "52"  [#1:0x1e9+0x2]
          Line 53: "53"  [#1:0x1ec+0x2]
          Line 54: "54"  [#1:0x1ef+0x2]
          Line 55: "55"  [#1:0x1f2+0x2]
          Line 56: "56"  [#1:0x1f5+0x2]
          Line 57: "57"  [#1:0x1f8+0x2]
          Line 58: "58"  [#1:0x1fb+0x2]
          Line 59: "59"  [#1:0x1fe+0x2]
          Line 60: "60"  [#1:0x201+0x2]
          Line 61: "61"  [#1:0x204+0x2]
          Line 62: "62"  [#1:0x207+0x2]
          Line 63: "63"  [#1:0x20a+0x2]
          Line 64: "64"  [#1:0x20d+0x2]
          Line 65: "65"  [#1:0x210+0x2]
          Line 66: "66"  [#1:0x213+0x2]
          Line 67: "67"  [#1:0x216+0x2]
          Line 68: "68"  [#1:0x219+0x2]
          Line 69: "69"  [#1:0x21c+0x2]
          Line 70: "70"  [#1:0x21f+0x2]
          Line 71: "71"  [#1:0x222+0x2]
          Line 72: "72"  [#1:0x225+0x2]
          Line 73: "73"  [#1:0x228+0x2]
          Line 74: "74"  [#1:0x22b+0x2]
          Line 75: "75"  [#1:0x22e+0x2]
          Line 76: "76"  [#1:0x231+0x2]
          Line 77: "77"  [#1:0x234+0x2]
          Line 78: "78"  [#1:0x237+0x2]
          Line 79: "79"  [#1:0x23a+0x2]
          Line 80: "80"  [#1:0x23d+0x2]
          Line 81: "81"  [#1:0x240+0x2]
          Line 82: "82"  [#1:0x243+0x2]
          Line 83: "83"  [#1:0x246+0x2]
          Line 84: "84"  [#1:0x249+0x2]
          Line 85: "85"  [#1:0x24c+0x2]
          Line 86: "86"  [#1:0x24f+0x2]
          Line 87: "87"  [#1:0x252+0x2]
          Line 88: "88"  [#1:0x255+0x2]
          Line 89: "89"  [#1:0x258+0x2]
          Line 90: "90"  [#1:0x25b+0x2]
          Line 91: "91"  [#1:0x25e+0x2]
          Line 92: "92"  [#1:0x261+0x2]
          Line 93: "93"  [#1:0x264+0x2]
          Line 94: "94"  [#1:0x267+0x2]
          Line 95: "95"  [#1:0x26a+0x2]
          Line 96: "96"  [#1:0x26d+0x2]
          Line 97: "97"  [#1:0x270+0x2]
          Line 98: "98"  [#1:0x273+0x2]
          Line 99: "99"  [#1:0x276+0x2]
          Line 100: "100"  [#1:0x279+0x3]
          Line 101: "101"  [#1:0x27d+0x3]
          Line 102: "102"  [#1:0x281+0x3]
          Line 103: "103"  [#1:0x285+0x3]
          Line 104: "104"  [#1:0x289+0x3]
          Line 105: "105"  [#1:0x28d+0x3]
          Line 106: "106"  [#1:0x291+0x3]
          Line 107: "107"  [#1:0x295+0x3]
          Line 108: "108"  [#1:0x299+0x3]
          Line 109: "109"  [#1:0x29d+0x3]
          Line 110: "110"  [#1:0x2a1+0x3]
          Line 111: "111"  [#1:0x2a5+0x3]
          Line 112: "112"  [#1:0x2a9+0x3]
          Line 113: "113"  [#1:0x2ad+0x3]
          Line 114: "114"  [#1:0x2b1+0x3]
          Line 115: "115"  [#1:0x2b5+0x3]
          Line 116: "116"  [#1:0x2b9+0x3]
          Line 117: "117"  [#1:0x2bd+0x3]
          Line 118: "118"  [#1:0x2c1+0x3]
          Line 119: "119"  [#1:0x2c5+0x3]
          Line 120: "120"  [#1:0x2c9+0x3]
          Line 121: "121"  [#1:0x2cd+0x3]
          Line 122: "122"  [#1:0x2d1+0x3]
          Line 123: "123"  [#1:0x2d5+0x3]
          Line 124: "124"  [#1:0x2d9+0x3]
          Line 125: "125"  [#1:0x2dd+0x3]
          Line 126: "126"  [#1:0x2e1+0x3]
          Line 127: "127"  [#1:0x2e5+0x3]
          Line 128: "128"  [#1:0x2e9+0x3]
          Line 129: "129"  [#1:0x2ed+0x3]
          Line 130: "130"  [#1:0x2f1+0x3]
          Line 131: "131"  [#1:0x2f5+0x3]
          Line 132: "132"  [#1:0x2f9+0x3]
          Line 133: "133"  [#1:0x2fd+0x3]
          Line 134: "134"  [#1:0x301+0x3]
          Line 135: "135"  [#1:0x305+0x3]
          Line 136: "136"  [#1:0x309+0x3]
          Line 137: "137"  [#1:0x30d+0x3]
          Line 138: "138"  [#1:0x311+0x3]
          Line 139: "139"  [#1:0x315+0x3]
          Line 140: "140"  [#1:0x319+0x3]
          Line 141: "141"  [#1:0x31d+0x3]
          Line 142: "142"  [#1:0x321+0x3]
          Line 143: "143"  [#1:0x325+0x3]
          Line 144: "144"  [#1:0x329+0x3]
          Line 145: "145"  [#1:0x32d+0x3]
          Line 146: "146"  [#1:0x331+0x3]
          Line 147: "147"  [#1:0x335+0x3]
          Line 148: "148"  [#1:0x339+0x3]
          Line 149: "149"  [#1:0x33d+0x3]
          Line 150: "150"  [#1:0x341+0x3]
          Line 151: "151"  [#1:0x345+0x3]
          Line 152: "152"  [#1:0x349+0x3]
          Line 153: "153"  [#1:0x34d+0x3]
          Line 154: "154"  [#1:0x351+0x3]
          Line 155: "155"  [#1:0x355+0x3]
          Line 156: "156"  [#1:0x359+0x3]
          Line 157: "157"  [#1:0x35d+0x3]
          Line 158: "158"  [#1:0x361+0x3]
          Line 159: "159"  [#1:0x365+0x3]
          Line 160: "160"  [#1:0x369+0x3]
          Line 161: "161"  [#1:0x36d+0x3]
          Line 162: "162"  [#1:0x371+0x3]
          Line 163: "163"  [#1:0x375+0x3]
          Line 164: "164"  [#1:0x379+0x3]
          Line 165: "165"  [#1:0x37d+0x3]
          Line 166: "166"  [#1:0x381+0x3]
          Line 167: "167"  [#1:0x385+0x3]
          Line 168: "168"  [#1:0x389+0x3]
          Line 169: "169"  [#1:0x38d+0x3]
          Line 170: "170"  [#1:0x391+0x3]
          Line 171: "171"  [#1:0x395+0x3]
          Line 172: "172"  [#1:0x399+0x3]
          Line 173: "173"  [#1:0x39d+0x3]
          Line 174: "174"  [#1:0x3a1+0x3]
          Line 175: "175"  [#1:0x3a5+0x3]
          Line 176: "176"  [#1:0x3a9+0x3]
          Line 177: "177"  [#1:0x3ad+0x3]
          Line 178: "178"  [#1:0x3b1+0x3]
          Line 179: "179"  [#1:0x3b5+0x3]
          Line 180: "180"  [#1:0x3b9+0x3]
          Line 181: "181"  [#1:0x3bd+0x3]
          Line 182: "182"  [#1:0x3c1+0x3]
          Line 183: "183"  [#1:0x3c5+0x3]
          Line 184: "184"  [#1:0x3c9+0x3]
          Line 185: "185"  [#1:0x3cd+0x3]
          Line 186: "186"  [#1:0x3d1+0x3]
          Line 187: "187"  [#1:0x3d5+0x3]
          Line 188: "188"  [#1:0x3d9+0x3]
          Line 189: "189"  [#1:0x3dd+0x3]
          Line 190: "190"  [#1:0x3e1+0x3]
          Line 191: "191"  [#1:0x3e5+0x3]
          Line 192: "192"  [#1:0x3e9+0x3]
          Line 193: "193"  [#1:0x3ed+0x3]
          Line 194: "194"  [#1:0x3f1+0x3]
          Line 195: "195"  [#1:0x3f5+0x3]
          Line 196: "196"  [#1:0x3f9+0x3]
          Line 197: "197"  [#1:0x3fd+0x3]
          Line 198: "198"  [#1:0x401+0x3]
          Line 199: "199"  [#1:0x405+0x3]
          Line 200: "200"  [#1:0x409+0x3]
          Line 201: "201"  [#1:0x40d+0x3]
          Line 202: "202"  [#1:0x411+0x3]
          Line 203: "203"  [#1:0x415+0x3]
          Line 204: "204"  [#1:0x419+0x3]
          Line 205: "205"  [#1:0x41d+0x3]
          Line 206: "206"  [#1:0x421+0x3]
          Line 207: "207"  [#1:0x425+0x3]
          Line 208: "208"  [#1:0x429+0x3]
          Line 209: "209"  [#1:0x42d+0x3]
          Line 210: "210"  [#1:0x431+0x3]
          Line 211: "211"  [#1:0x435+0x3]
          Line 212: "212"  [#1:0x439+0x3]
          Line 213: "213"  [#1:0x43d+0x3]
          Line 214: "214"  [#1:0x441+0x3]
          Line 215: "215"  [#1:0x445+0x3]
          Line 216: "216"  [#1:0x449+0x3]
          Line 217: "217"  [#1:0x44d+0x3]
          Line 218: "218"  [#1:0x451+0x3]
          Line 219: "219"  [#1:0x455+0x3]
          Line 220: "220"  [#1:0x459+0x3]
          Line 221: "221"  [#1:0x45d+0x3]
          Line 222: "222"  [#1:0x461+0x3]
          Line 223: "223"  [#1:0x465+0x3]
          Line 224: "224"  [#1:0x469+0x3]
          Line 225: "225"  [#1:0x46d+0x3]
          Line 226: "226"  [#1:0x471+0x3]
          Line 227: "227"  [#1:0x475+0x3]
          Line 228: "228"  [#1:0x479+0x3]
          Line 229: "229"  [#1:0x47d+0x3]
          Line 230: "230"  [#1:0x481+0x3]
          Line 231: "231"  [#1:0x485+0x3]
          Line 232: "232"  [#1:0x489+0x3]
          Line 233: "233"  [#1:0x48d+0x3]
          Line 234: "234"  [#1:0x491+0x3]
          Line 235: "235"  [#1:0x495+0x3]
          Line 236: "236"  [#1:0x499+0x3]
          Line 237: "237"  [#1:0x49d+0x3]
          Line 238: "238"  [#1:0x4a1+0x3]
          Line 239: "239"  [#1:0x4a5+0x3]
          Line 240: "240"  [#1:0x4a9+0x3]
          Line 241: "241"  [#1:0x4ad+0x3]
          Line 242: "242"  [#1:0x4b1+0x3]
          Line 243: "243"  [#1:0x4b5+0x3]
          Line 244: "244"  [#1:0x4b9+0x3]
          Line 245: "245"  [#1:0x4bd+0x3]
          Line 246: "246"  [#1:0x4c1+0x3]
          Line 247: "247"  [#1:0x4c5+0x3]
          Line 248: "248"  [#1:0x4c9+0x3]
          Line 249: "249"  [#1:0x4cd+0x3]
          Line 250: "250"  [#1:0x4d1+0x3]
          Line 251: "251"  [#1:0x4d5+0x3]
          Line 252: "252"  [#1:0x4d9+0x3]
          Line 253: "253"  [#1:0x4dd+0x3]
          Line 254: "254"  [#1:0x4e1+0x3]
          Line 255: "255"  [#1:0x4e5+0x3]
          Line 256: "256"  [#1:0x4e9+0x3]
          Line 257: "257"  [#1:0x4ed+0x3]
          Line 258: "258"  [#1:0x4f1+0x3]
          Line 259: "259"  [#1:0x4f5+0x3]
          Line 260: "260"  [#1:0x4f9+0x3]
          Line 261: "261"  [#1:0x4fd+0x3]
          Line 262: "262"  [#1:0x501+0x3]
          Line 263: "263"  [#1:0x505+0x3]
          Line 264: "264"  [#1:0x509+0x3]
          Line 265: "265"  [#1:0x50d+0x3]
          Line 266: "266"  [#1:0x511+0x3]
          Line 267: "267"  [#1:0x515+0x3]
          Line 268: "268"  [#1:0x519+0x3]
          Line 269: "269"  [#1:0x51d+0x3]
          Line 270: "270"  [#1:0x521+0x3]
          Line 271: "271"  [#1:0x525+0x3]
          Line 272: "272"  [#1:0x529+0x3]
          Line 273: "273"  [#1:0x52d+0x3]
          Line 274: "274"  [#1:0x531+0x3]
          Line 275: "275"  [#1:0x535+0x3]
          Line 276: "276"  [#1:0x539+0x3]
          Line 277: "277"  [#1:0x53d+0x3]
          Line 278: "278"  [#1:0x541+0x3]
          Line 279: "279"  [#1:0x545+0x3]
          Line 280: "280"  [#1:0x549+0x3]
          Line 281: "281"  [#1:0x54d+0x3]
          Line 282: "282"  [#1:0x551+0x3]
          Line 283: "283"  [#1:0x555+0x3]
          Line 284: "284"  [#1:0x559+0x3]
          Line 285: "285"  [#1:0x55d+0x3]
          Line 286: "286"  [#1:0x561+0x3]
          Line 287: "287"  [#1:0x565+0x3]
          Line 288: "288"  [#1:0x569+0x3]
          Line 289: "289"  [#1:0x56d+0x3]
          Line 290: "290"  [#1:0x571+0x3]
          Line 291: "291"  [#1:0x575+0x3]
          Line 292: "292"  [#1:0x579+0x3]
          Line 293: "293"  [#1:0x57d+0x3]
          Line 294: "294"  [#1:0x581+0x3]
          Line 295: "295"  [#1:0x585+0x3]
          Line 296: "296"  [#1:0x589+0x3]
          Line 297: "297"  [#1:0x58d+0x3]
          Line 298: "298"  [#1:0x591+0x3]
          Line 299: "299"  [#1:0x595+0x3]
          Line 300: "300"  [#1:0x599+0x3]
